force-app/main/default/objects/KuniEmployee__c/KuniEmployee__c.object-meta.xml
<CustomObject>
    <label>KuniEmployee</label>
    <nameField>
        <label>KuniEmployee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KuniEmployees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>