force-app/main/default/objects/KuniEmployee__c/fields/EmpID__c.field-meta.xml
<CustomField>
    <fullName>EmpID__c</fullName>
    <displayFormat>E-{YYYY}{MM}{DD}-{000}</displayFormat>
    <externalId>true</externalId>
    <label>EmpID</label>
    <type>AutoNumber</type>
</CustomField>