force-app/main/default/objects/KuniEmployee__c/fields/KuniDepartment__c.field-meta.xml
<CustomField>
    <fullName>KuniDepartment__c</fullName>
    <label>KuniDepartment</label>
    <referenceTo>KuniDepartment__c</referenceTo>
    <relationshipLabel>KuniEmployees</relationshipLabel>
    <relationshipName>KuniEmployees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>